# BriefFlow

./: .gitignore  metadata.json
.tmp/: test_coverage_and_readme_audit_report.md
docs/: api-spec.md  design.md  questions.md
repo/: .env.example  Cargo.toml  Dioxus.toml  README.md  Rocket.toml  docker-compose.yml  run_tests.sh
repo/.github/workflows/: ci.yml
repo/backend/: Cargo.toml  Dockerfile
repo/backend/src/: api_tests.rs  main.rs
repo/backend/src/db/: analytics.rs  cart.rs  dispatch.rs  exam.rs  mod.rs  orders.rs  products.rs  sessions.rs  store.rs  training.rs  users.rs
repo/backend/src/middleware/: auth_guard.rs  log_mask.rs  mod.rs
repo/backend/src/routes/: admin.rs  auth.rs  cart.rs  dispatch.rs  exam.rs  health.rs  i18n.rs  mod.rs  orders.rs  products.rs  sitemap.rs  staff.rs  store.rs  training.rs
repo/backend/src/services/: auth.rs  crypto.rs  csv_import.rs  dispatch.rs  exam_generator.rs  fulfillment.rs  health.rs  mod.rs  pickup.rs  pricing.rs  reservation_lock.rs  resilience.rs  session.rs
repo/database/: test_users.sql
repo/docs/: api-spec.md
repo/frontend/: Cargo.toml  Dockerfile  nginx.conf
repo/frontend/assets/: main.css
repo/frontend/src/: main.rs
repo/frontend/src/components/: footer.rs  hold_timer.rs  locale_switcher.rs  mod.rs  navbar.rs  option_selector.rs  price_display.rs  slot_picker.rs  status_badge.rs
repo/frontend/src/pages/: admin.rs  auth.rs  cart.rs  checkout.rs  home.rs  menu.rs  mod.rs  orders.rs  product.rs  staff.rs  training.rs
repo/frontend/src/state/: mod.rs
sessions/: bugfix-2.json
(+15 files in other folders)
