[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
rocket = { version = "0.5", features = ["json", "secrets"] }
rocket_cors = "0.6"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "tls-rustls", "mysql", "chrono", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
bcrypt = "0.15"
csv = "1"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
